# rust8

./: Cargo.toml  README.md
.github/workflows/: release.yml
chip8/: Cargo.toml
chip8/src/: error.rs  lib.rs  memory.rs  screen.rs
emulator/: Cargo.toml
emulator/src/: display.rs  emulator.rs  keypad.rs  lib.rs  memory.rs  registers.rs  timers.rs
src/: args.rs  main.rs  utils.rs
