[package]
name = "rust8_frontend"
version = "0.8.0"
authors = ["Mikołaj Rosowski <m.rosowski1@wp.pl>"]
edition = "2021"

[[bin]]
name = "rust8"
path = "src/main.rs"

[profile.release]
lto = true
strip = "all"

[dependencies]
anyhow = "1.0.59"
rust8 = { path = "./emulator" }
clap = { version = "3.2.16", features = ["cargo"] }
game-loop = { version = "0.9.1", features = ["window"] }
pixels = "0.9.0"
winit = "0.26.0"
winit_input_helper = "0.12.0"
lazy_static = "1.4.0"
